
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int input_driver_t ;



__attribute__((used)) static void gfx_ctx_vivante_input_driver(void *data,
      const char *name,
      input_driver_t **input, void **input_data)
{
   *input = ((void*)0);
   *input_data = ((void*)0);
}
